extra/templates/team-template/network-policy.yaml
### from https://kubernetes.io/docs/concepts/services-networking/network-policies/#default-deny-all-ingress-traffic
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: TEAM-default-deny-ingress
  annotations:
    configmanagement.gke.io/namespace-selector: TEAM-fleet-scope-selector
spec:
  podSelector: {}
  policyTypes:
  - Ingress
